--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -8,10 +8,18 @@
   <body>
     <h1>Dynamic Quote Generator</h1>
 
+    <!-- Category Filter Dropdown -->
+    <select id="categoryFilter" onchange="filterQuotes()">
+      <option value="all">All Categories</option>
+    </select>
+
+    <!-- Quote Display -->
     <div id="quoteDisplay"></div>
 
+    <!-- Buttons -->
     <button id="newQuote">Show New Quote</button>
 
+    <!-- Form for Adding Quotes -->
     <div>
       <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
       <input
@@ -22,6 +30,7 @@
       <button onclick="addQuote()">Add Quote</button>
     </div>
 
+    <!-- Export & Import Functionality -->
     <button id="exportQuotes">Export Quotes</button>
     <input
       type="file"
